SERVER-54014 Define a reasonable maxTimeMsOverride for the checkOID requests