src/mongo/db/s/balancer/balancer.cpp
@@ -497,6 +497,7 @@ bool Balancer::_checkOIDs(OperationContext* opCtx) {
                                                 ReadPreferenceSetting{ReadPreference::PrimaryOnly},
                                                 "admin",
                                                 BSON("features" << 1),
+                                                Seconds(30),
                                                 Shard::RetryPolicy::kIdempotent));
         uassertStatusOK(result.commandStatus);
         BSONObj f = std::move(result.response);
@@ -514,6 +515,7 @@ bool Balancer::_checkOIDs(OperationContext* opCtx) {
                     ReadPreferenceSetting{ReadPreference::PrimaryOnly},
                     "admin",
                     BSON("features" << 1 << "oidReset" << 1),
+                    Seconds(30),
                     Shard::RetryPolicy::kIdempotent));
                 uassertStatusOK(result.commandStatus);
 
@@ -525,6 +527,7 @@ bool Balancer::_checkOIDs(OperationContext* opCtx) {
                             ReadPreferenceSetting{ReadPreference::PrimaryOnly},
                             "admin",
                             BSON("features" << 1 << "oidReset" << 1),
+                            Seconds(30),
                             Shard::RetryPolicy::kIdempotent));
                     uassertStatusOK(result.commandStatus);
                 }
